--- a/AsteroidTracker.Front/Views/Login/Index.cshtml
+++ b/AsteroidTracker.Front/Views/Login/Index.cshtml
@@ -31,6 +31,7 @@
 								<button type="submit" class="form-control btn btn-primary rounded submit px-3">Login</button>
 							</div>
 						</form>
+						<span id="login-error" class="text-danger">Usuario o contraseña incorrecto.</span>
 					</div>
 				</div>
 			</div>
